@@ -30,7 +30,7 @@ ZLIB_VER=1.2.8
 EXPAT_VER=2.1.0
 BZIP2_VER=1.0.6
 # LIBPNG_VER=1.2.50
-LIBPNG_VER=1.2.53
+LIBPNG_VER=1.2.56
 # JPEG_VER=8c
 JPEG_VER=8d
 JPEG_TURBO_VER=1.4.1
